tests/parsing/smtlib/v2.7/errors/115_command_bad_name_2.smt2
(set-logic ALL)
(declare-fun a () Int)
(minimize a)
(check-sat)
